# ide-orchestrator

./: .aidigestignore  .coverage  .gitignore  Dockerfile  Dockerfile.go  Makefile  README.md  docker-compose.yml  go.mod  go.sum  pyproject.toml  run.sh  setup.sh  test_websocket_local.py  test_websocket_proxy_langserve.go  test_websocket_proxy_langserve.py
.github/workflows/: auth-db-tests.yml  auth-integration-tests.yml  build-and-push.yml  in-cluster-test.yml  inject-secrets.yml  jwt-validation-tests.yml  main-pipeline.yml  main.yml  quality-gate.yml  workflow-integration-tests.yml
.kiro/: spec.md
api/: dependencies.py  main.py
api/routers/: auth.py  health.py  refinements.py  websockets.py  workflows.py
ci/: config.yaml
cmd/api/: main.go
cmd/seed-user/: main.go
core/: jwt_manager.py  metrics.py
docs/: docs.go  task-2-3-completion-summary.md  websocket-proxy-langserve-validation.md
internal/auth/: jwt_manager.go  middleware.go
internal/gateway/: deepagents_websocket_proxy.go  deepagents_websocket_proxy_test.go  handler.go  websocket.go
internal/metrics/: job_metrics.go  job_metrics_test.go
internal/models/: error.go  events.go  spec_engine.go  user.go  workflow.go
internal/orchestration/: deepagents_runtime_client.go  deepagents_runtime_client_test.go  service.go  spec_engine_client.go
llm-context/: CI-INTEGRATION-TESTING-PATTERN.md  LOCAL-TESTING-PATTERN.md  TESTING.md  in-cluster-testing.md  local-testing.md
migrations/: 000001_create_users_table.down.sql  000001_create_users_table.up.sql  000002_create_workflow_tables.down.sql  000002_create_workflow_tables.up.sql  000003_create_draft_proposal_tables.down.sql  000003_create_draft_proposal_tables.up.sql  000004_add_builder_agent_columns.down.sql  000004_add_builder_agent_columns.up.sql  000005_add_workflow_locking.down.sql  000005_add_workflow_locking.up.sql  000006_add_draft_based_on_version.down.sql  000006_add_draft_based_on_version.up.sql  000007_add_deepagents_runtime_fields.down.sql  000007_add_deepagents_runtime_fields.up.sql  000008_add_proposal_resolution_field.down.sql  000008_add_proposal_resolution_field.up.sql
models/: auth.py  workflow.py
platform/: argocd-application.yaml
scripts/: seed_user.py
scripts/ci/: apply-local-patches.sh  apply-patches.sh  bootstrap-platform.sh  build.sh  deploy-local-service.sh  deploy.sh  in-cluster-test.sh  post-deploy-diagnostics.sh  pre-deploy-diagnostics.sh  run-migrations.sh  run.sh  (+6 more)
services/: __init__.py  audit_service.py  auth_service.py  deepagents_client.py  draft_service.py  orchestration_service.py  proposal_service.py  workflow_service.py
templates/: multi-agent.json  single-agent.json
(+64 files in other folders)
